--- a/src/components/sections/Showcase.module.css
+++ b/src/components/sections/Showcase.module.css
@@ -1,5 +1,5 @@
 .ShowcaseSection {
-    width: 75%;
+    width: 70%;
 }
 
 .showRoom {
